appId: com.elid.app
---
- swipe:
    direction: LEFT
    duration: 400
- waitForAnimationToEnd
- swipe:
    direction: LEFT
    duration: 400
- waitForAnimationToEnd
- swipe:
    direction: LEFT
    duration: 400
- waitForAnimationToEnd
- tapOn: "시작하기"
- waitForAnimationToEnd:
    timeout: 2000
